[package]
name = "thesy_parser"
version = "0.1.0"
authors = ["Eytan Singher <eytan.singher@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
log = "0.4.17"
lalrpop-util = "0.19.7"
regex = "1"
itertools = "0.10.0"
lazy_static = "1.4.0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
